# ensenso_extrinsic_calibration

./: .travis.yml  .travis_pcl.sh  .travis_vtk.sh  LICENSE  README.md
abb_irb2400_ensenso_extrinsic_calibration/: CMakeLists.txt  package.xml
abb_irb2400_ensenso_extrinsic_calibration/launch/: calibration.launch
documentation/: tutorial.md
ensenso_extrinsic_calibration/: package.xml
ensenso_rviz_plugin/: CMakeLists.txt  package.xml
ensenso_rviz_plugin/src/: ensenso_panel.cpp  ensenso_panel.h
ensenso_rviz_plugin/srv/: PerformEnsensoCalibration.srv  TestEnsensoCalibration.srv
grinding_ensenso_extrinsic_calibration/: CMakeLists.txt  package.xml
grinding_ensenso_extrinsic_calibration/config/: robot_state_visualize.rviz
grinding_ensenso_extrinsic_calibration/launch/: ensenso_extrinsic_calibration.launch  irb1200_calibration.launch  irb2400_calibration.launch  irb4600_calibration.launch
grinding_ensenso_extrinsic_calibration/src/: ensenso_extrinsic_calibration.cpp
ur10_ensenso_extrinsic_calibration/: CMakeLists.txt  package.xml
ur10_ensenso_extrinsic_calibration/config/: robot_state_visualize.rviz
ur10_ensenso_extrinsic_calibration/launch/: calibration.launch
ur10_ensenso_extrinsic_calibration/src/: ensenso_extrinsic_calibration.cpp
